# gmail_notification_to_mattermost

./: .gitignore  README.md  pyproject.toml  requirements.txt
gmail_notification_to_mattermost/: main.py
gmail_notification_to_mattermost/lib/: get_credential.py  gmail.py
